<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id = "@+id/paramLayout"

    xmlns:tools  ="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app    ="http://schemas.android.com/apk/res-auto"

    android:layout_width ="wrap_content"
    android:layout_height="wrap_content"

    app:layout_constraintEnd_toEndOf ="parent">

    <!-- 1- Erros -->
    <TextView android:id="@+id/tvLegErros"

        android:layout_width ="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf    ="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart ="10dp"
        android:layout_marginTop   ="30dp"
        android:text="@string/limite_de_erros" />

    <EditText
        android:id="@+id/edtErros"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:gravity="center_horizontal"

        android:hint="@string/valor_menos1"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toEndOf="@+id/tvLegErros"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill" />

    <!-- 2- Tempo -->
    <TextView android:id="@+id/tvLegTempo"

        android:layout_width ="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf ="@+id/tvLegErros"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart ="10dp"
        android:layout_marginTop   ="30dp"
        android:text="@string/limite_de_tempo" />

    <EditText android:id="@+id/edtTempo"

        android:layout_width ="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="10dp"
        android:layout_marginEnd  ="10dp"
        android:layout_marginTop  ="15dp"
        android:gravity="center_horizontal"

        app:layout_constraintTop_toBottomOf ="@+id/edtErros"
        app:layout_constraintStart_toEndOf  ="@+id/tvLegTempo"
        app:layout_constraintEnd_toEndOf    ="parent"

        android:inputType="time"
        android:hint     = "@string/time_HHss"
        tools:ignore="Autofill" />

</androidx.constraintlayout.widget.ConstraintLayout>